# Quadruped-Robot-Intelligent-Control-System

./: .clang-format  .clang-tidy  .gitignore  .gitmessage  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/: qrics_cli.cpp
cmake/: ProjectOptions.cmake
configs/policies/: placeholder_policy.yaml
configs/scenes/: minimal_scene.yaml
configs/training/: minimal_training.yaml
docs/adr/: 0001-project-skeleton.md  0002-safety-shield-and-control-loop.md  0003-task-understanding-baseline.md  0004-task-orchestrator-application-layer.md  0005-config-loading-and-resource-validation.md  0006-task-executor-and-placeholder-policy-runtime.md
include/qrics/common/: types.hpp
include/qrics/config/: config_error.hpp  policy_config_loader.hpp  scene_config_loader.hpp  training_config_loader.hpp
include/qrics/control/: action.hpp  control_loop.hpp  control_state.hpp  local_planner.hpp  policy_runtime.hpp  task_executor.hpp
include/qrics/core/: version.hpp
include/qrics/domain/: domain.hpp
include/qrics/experiment/: experiment_run.hpp
include/qrics/safety/: safety_event.hpp  safety_shield.hpp
include/qrics/scenario/: scene_profile.hpp
include/qrics/simulation/: observation.hpp  simulation_adapter.hpp
include/qrics/task/: constraint_engine.hpp  execution_preview.hpp  policy_selector.hpp  task_catalog.hpp  task_graph_planner.hpp  task_lifecycle.hpp  task_orchestrator.hpp  task_orchestrator_service.hpp  task_parser.hpp  task_script.hpp  task_session_store.hpp  task_understanding_pipeline.hpp
include/qrics/training/: policy_artifact.hpp
python/qrics/: __init__.py
scripts/: check_all.sh  collect_env.sh
src/config/: config_error.cpp  policy_config_loader.cpp  scene_config_loader.cpp  training_config_loader.cpp
src/control/: rule_based_policy_runtime.cpp  simple_local_planner.cpp  task_executor.cpp
src/core/: version.cpp
src/task/: basic_explanation_service.cpp  basic_task_constraint_engine.cpp  in_memory_task_session_store.cpp  rule_based_chinese_task_parser.cpp  rule_based_policy_selector.cpp  sequential_task_graph_planner.cpp  task_orchestrator_service.cpp  task_understanding_pipeline.cpp
tests/cpp/: test_control_loop.cpp  test_domain_model.cpp  test_policy_config_loader.cpp  test_policy_runtime.cpp  test_safety_shield.cpp  test_scene_config_loader.cpp  test_task_executor.cpp  test_task_orchestrator.cpp  test_task_understanding.cpp  test_version.cpp
tests/python/: test_version.py
